--- a/src/components/Keypad/Keypad.module.css
+++ b/src/components/Keypad/Keypad.module.css
@@ -1,21 +1,33 @@
 .keypad {
   display: flex;
   flex-direction: column;
-  padding: var(--spacing-400);
+  padding: var(--spacing-200);
   background: var(--color-type-1-background);
   border-radius: 0.625rem;
+
+  @media (min-width: 48rem) {
+    padding: var(--spacing-400);
+  }
 }
 
 .rows {
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-300);
+  gap: var(--spacing-200);
+
+  @media (min-width: 48rem) {
+    gap: var(--spacing-300);
+  }
 }
 
 .row {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: var(--spacing-300);
+  gap: var(--spacing-200);
+
+  @media (min-width: 48rem) {
+    gap: var(--spacing-300);
+  }
 }
 
 .wide {
